RESULTS/AutoSpec/raw_results/out-4o-oopsla/036_0007/036_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/036_0007/036_merged.c:44:5: error: unterminated comment
   44 |     /* Loop invariant for the inner while loop */;
      |     ^
